--- a/src/Components/Cards/Cards.module.css
+++ b/src/Components/Cards/Cards.module.css
@@ -18,3 +18,15 @@
 .deaths {
   border-bottom: 10px solid rgba(255, 0, 0, 0.5);
 }
+
+@media (max-width: 1200px) {
+  .container {
+    width: 75%;
+  }
+}
+
+@media (max-width: 770px) {
+  .card {
+    margin: 5% 0 !important;
+  }
+}
